- MediaAccess class can handle the target=group-field authentication.
- The second parameter of IM_Entry function can have authentication/is-saml and saml-builtin-auth key.
- Update recipe.rb and Vagrantfile etc. for the INTER-Mediator-Server VM (Change to Ubuntu Server 18.04 LTS).
- Our CI operations moved to GitHub Actions from Travis CI.
- [INFO] The inter-mediator-plugin-fileupload is deprecated. The inter-mediator-plugin-jqueryfileupload is a replacement.
  We are going to maintain the jqueryfileupload so far and hope it forever.
- [BUG FIX] Fix compatibility with Claris FileMaker Server. The affected version is Ver.7.
- [BUG FIX] IMLibPageNavigation.moveDetailOnceAgain() didn't work fine.
- [BUG FIX] On the navi-control key, confirm-delete works but delete-confirm didn't (also insert).
- [BUG FIX] Fix handling Claris FileMaker's checkbox set feature when using DB_FileMaker_DataAPI class (Thanks to Mr. Masakatsu Inamoto).
- [BUG FIX] The $customLoginPanel variable in the params.php file didn't handle for anything. It removed.
- [BUG FIX] Authentication with session storage didn't expire. Now it follows the value of the 'expired' key.
- [BUG FIX] Fix portal access mode for FileMaker_FX class. The affected version is Ver.7.
- [BUG FIX] If nodes bond to the local context exist in enclosure/repeater (ex. within table tag), Some error (1046)
  rose up. So far the error doesn't rise, but these nodes should exist out side of enclosure/repeater. (Thanks to Mr. Hayashi)
- [BUG FIX] When the doAfterCopyInDB method calls, copied record information didn't pass to it.
- [BUG FIX] The $sendMailCompatibilityMode variable didn't affected.

Ver.7 (March 20, 2021)
- The synchronizing with clients is back without Pusher.
- The FileMaker_DataAPI class updated for API protocol ver.2. And also introduced the 'portals' key on context definitions.
- CSV File uploading and add records for each line. I'd like to check the 'samples/Sample_webpage/fileuploadCSV_MySQL.html'